Tank setting saving again

--- a/Aqua-Link/data_inject/settings.html
+++ b/Aqua-Link/data_inject/settings.html
@@ -29,6 +29,7 @@
 
     .container {
       margin-top: 1%;
+      margin-bottom: 1%;
       background: var(--light-bg);
       backdrop-filter: blur(10px);
       border-radius: var(--radius);
