--- a/RootCtrl/data_inject/settings.html
+++ b/RootCtrl/data_inject/settings.html
@@ -213,9 +213,8 @@
     </div>
 
     <div class="setting-section">
-      <div class="section-title">📤 MQTT Topics</div>
-      <form method="POST" action="/topics">
-        <table style="width: 100%;" id="topics_table"></table>
+      <div class="section-title">📤 Publish Timings</div>
+      <form method="POST" action="/period">
 
         <label>MQTT publish period (s):</label>
         <input type="number" min="1" max="3600" name="mqtt_publish" id="mqtt_publish_input" required>
