--- a/RootCtrl/data_inject/settings.html
+++ b/RootCtrl/data_inject/settings.html
@@ -218,8 +218,7 @@
 
         <label>MQTT publish period (s):</label>
         <input type="number" min="1" max="3600" name="mqtt_publish" id="mqtt_publish_input" required>
-
-        <label>Temperature read period (s):</label>
+        <label>External Temperature read period (s):</label>
         <input type="number" min="1" max="3600" name="temp_refresh" id="temp_refresh_input" required>
         </br>
         <button type="submit">Save</button>
